--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
+    implementation 'com.google.firebase:firebase-firestore:24.3.1'
 }
