--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:theme="@style/Theme.Projemanage"
         tools:targetApi="31">
         <activity
-            android:name=".BaseActivity"
+            android:name=".activities.MyProfileActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".activities.BaseActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SignInActivity"
@@ -43,8 +48,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.MainActivity"
-            android:exported="false" />
+            android:name="com.projemanag.activities.MainActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
